--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-<head>
-<title>My awesome web page </title
+    <head>
+        <title>My awesome web page</title>
     </head>
+
     <body>
         Hello there, awesome person!
     </body>
 </html>
 
+Hello there, awesome person!
 
